--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "multer": "^1.4.5-lts.2",
     "openai": "^4.87.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
